Modificaciones first mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="h-full bg-gray-300" lang="es">
+<html class="h-full bg-[#050F20]" lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
