--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html class="h-full bg-[#050F20]" lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goto GameJam</title>
   </head>
   <body class="h-full">
-    <div class="h-full grid grid-rows-layout" id="root"></div>
+    <div class="h-full" id="root"></div>
     <script type="module" src="main.jsx"></script>
   </body>
 </html>
