--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Goto GameJam</title>
   </head>
   <body class="h-full">
-    <div class="h-full" id="root"></div>
+    <div class="h-full grid grid-rows-layout" id="root"></div>
     <script type="module" src="main.jsx"></script>
   </body>
 </html>
+
+
